# rottie

./: Cargo.toml  Readme.md  config.yaml
db/: Cargo.toml
db/src/: lib.rs  rocks_db.rs
docs/: Orchestrator.md  Why.md  architecture.md  config.yaml  features.md
rottie_inference/: Cargo.toml
rottie_inference/src/: bert.rs  embeddings.rs  lib.rs  phi3.rs  utils.rs
rottie_training/: Cargo.toml
src/: config.rs  main.rs  orchestrator.rs
