[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = { version = "1.4.0", features = ["kv-rocksdb"] }
serde = { version = "1.0.198", features = ["derive"] }
async_once = "0.2.6"
regex = "1.10.4"
chrono = "0.4.38"
pdf-extract = "0.7.5"
byteorder = "1.5.0"
prettytable-rs = "0.10.0"
dirs = "5.0.1"
anyhow = "1.0.80"
tracing = "0.1.37"
tracing-log = "0.2.0"
serde_json = "1.0.115"
lazy_static = "1.4.0"
rottie_inference = {workspace = true}

